<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashBoard">

    <EditText
        android:id="@+id/etSupportQuery"
        android:layout_width="347dp"
        android:layout_height="169dp"
        android:ellipsize="end"
        android:ems="10"
        android:gravity="left"
        android:hint="@string/enter_details"
        android:padding="20dp"
        android:paddingStart="10dp"
        android:textColorHint="@color/colorOrange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028" />

    <EditText
        android:id="@+id/etContactDetail"
        android:layout_width="347dp"
        android:layout_height="42dp"
        android:ems="10"
        android:hint="@string/client_name"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorOrange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.409" />

    <EditText
        android:id="@+id/topic"
        android:layout_width="347dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/subject_headline_topic"
        android:textColorHint="@color/colorOrange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.305" />

    <Button
        android:id="@+id/sendSupportQuery"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button"
        android:text="@string/upload"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.816"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.551" />

</androidx.constraintlayout.widget.ConstraintLayout>